# llm-zoomcamp-2026-hw

./: .gitignore  pyproject.toml
homework-01/: homework-01.ipynb
homework-02/: homework-02.ipynb  pyproject.toml
homework-03/: generate-env.sh  homework-03.md
homework-04/: homework-04.ipynb  pyproject.toml
