[project]
name = "homework-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "minsearch>=0.1.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tokenizers>=0.23.1",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.18.0",
    "jupyter>=1.1.1",
]
